--- a/WebDevTest/WebService/Web.config
+++ b/WebDevTest/WebService/Web.config
@@ -38,7 +38,7 @@
     <directoryBrowse enabled="true" />
   </system.webServer>
   <connectionStrings>
-    <add name="AdventureWorksDW2008R2Entities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=AdventureWorksDW2008R2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AdventureWorksDW2008R2Entities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(XLN562\SQL2012);initial catalog=AdventureWorksDW2008R2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
