--- a/WebDevTest/ODT.DataAccessTests/app.config
+++ b/WebDevTest/ODT.DataAccessTests/app.config
@@ -1,15 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <system.serviceModel>
-        <bindings>
-            <basicHttpBinding>
-                <binding name="BasicHttpBinding_IOAService" />
-            </basicHttpBinding>
-        </bindings>
-        <client>
-            <endpoint address="http://localhost:36151/OAService.svc" binding="basicHttpBinding"
-                bindingConfiguration="BasicHttpBinding_IOAService" contract="OAService.IOAService"
-                name="BasicHttpBinding_IOAService" />
-        </client>
+        <bindings />
+        <client />
     </system.serviceModel>
 </configuration>
