--- a/WebDevTest/OrbusDevTest/Web.config
+++ b/WebDevTest/OrbusDevTest/Web.config
@@ -71,19 +71,29 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="4.0.0.0-4.0.0.1" newVersion="4.0.0.1" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.1" newVersion="4.0.0.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Configuration" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Xml" publicKeyToken="b77a5c561934e089" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IOAService" maxReceivedMessageSize="2147483647" maxBufferSize="2147483647" maxBufferPoolSize="2147483647">
-        </binding>
+        <binding name="BasicHttpBinding_IOAService" maxBufferPoolSize="2147483647"
+          maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" />
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:36151/OAService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IOAService" contract="OAService.IOAService" name="BasicHttpBinding_IOAService" />
+      <endpoint address="http://localhost:36151/OAService.svc" binding="basicHttpBinding"
+        bindingConfiguration="BasicHttpBinding_IOAService" contract="OAService.IOAService"
+        name="BasicHttpBinding_IOAService" />
     </client>
   </system.serviceModel>
 
